--- a/src/test/resources/test-messages/output/classic/complex-test.html
+++ b/src/test/resources/test-messages/output/classic/complex-test.html
@@ -1638,7 +1638,30 @@
  <img src="https://mailer.mail.ru/pub/mailer/pixel/3001/eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJsZXR0ZXJfaWQiOjMwMDEsImVtYWlsIjoiYmF0bWFuMTExNTU1QG1haWwucnUiLCJ0ZXN0aW5nIjowLCJwb3N0X3R5cGUiOiJDIiwicG9zdF9pZCI6NDIsInNlbmRfdXVpZCI6ImVhNzMzNzU0LTM0MWQtNGQ0Yi04ZDJjLTcwYWMwYzBiOWJmNCIsImxhbmd1YWdlIjoicnUifQ.kBxrr6UFII4HGPuEInkOKX_MpZKSCLhZk6lGnVCJyC8" width="0" height="0" alt="."/>    . 
 
 
- </div>  
+ </div> 
+
+ 
+ 
+
+ <pre>
+ 
+
+   
+      Received: from ABMAIL13.ci.atlantic-beach.fl.us (10.10.10.21) by
+ ABMAIL13.ci.atlantic-beach.fl.us (10.10.10.21) with Microsoft SMTP Server
+ (TLS) id 15.0.1076.9; Mon, 11 Apr 2016 09:08:47 -0400
+Received: from ABMAIL13.ci.atlantic-beach.fl.us ([fe80::3d58:a9bc:50f6:e563])
+
+ by ABMAIL13.ci.atlantic-beach.fl.us ([fe80::3d58:a9bc:50f6:e563%17]) with
+
+ mapi id 15.00.1076.000; Mon, 11 Apr 2016 09:08:47 -0400
+
+
+ </pre>  
+
+ 
+ 
+
  </body>
  
  
